Doubled wire output in Immersive Engineering metal press to incentivize user to get metal press (beyond cheaper Create Saw).
Added Mystical Agriculture Seeds to Garden Cloche.
Added Mystical Agriculture Mystical Fertilizer to Garden Cloche Fertilizers.
Added Farmer's Delight Tomato and Cabbage to Garden Cloche.
Changed Fire Agglomeratio Recipe to make easier early game lava.

Started Immersive Engineering questline.
Added to Pam's Harvestcraft Questline.
Added quests in Create chapter (rose quartz, electron tube, deployer, precision mechanism, mechanical arm, rotation speed controller).

https://www.youtube.com/watch?v=Bov8-HpO10Y

1.21.1-1.6-Beta
Note, this is an early update to address the bugged export of 1.21.1-1.5-beta.
This is not titled 1.21.1-1.5b-beta because I made some additions since the 05/16/2025 release of 1.21.1-1.5-beta.

Added More Immersive Wires.

Updated Create Sifting.
Updated Immersive Engineering.
Updated Mechanicals Lib.
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.

Added KubeJS Block of Raw Ores.
Added KubeJS Raw Ores (Tin, Lead, Silver, Nickel, Osmium, Uranium) and Textures.
Added KubeJS Raw Tin, Lead, Silver, Nickel, Osmium, Uranium to Andesite Mesh & Gravel Create Sifting Recipe.
Fixed Storage Block Textures.

Added to Immersive Engineering Questline.
Modified Alpha Questline.

https://www.youtube.com/watch?v=JoW4HgBsgYs

1.21.1-1.7-beta

Added Industrial Foregoing.
Added Titanium.

Updated JourneyMap.
Updated ModernFix.

Added netherrack andesite mesh create sifting recipe.
Moved gateways to eternity datapack to KubeJS data folder.
Changed waterlogged dirt create sifting recipe to require sand.
Added sugar cane to the above recipe.
Created create sifter sand recipe (bone meal and cactus for now).
Added farmers delight wild rice to create sifter (dirt).
Added pumpkin seeds and melon seeds to create sifter (dirt).

Added Industrial Foregoing Questline.
Added to Epsilon Questline.