@@ -1,8 +1,3 @@
-/fly
-/tp 0 100 0
-/tp 1000 100 1000
-/gamemode creative
-/clear
 /tp 0 100 0
 /kubejs hand
 /clear
@@ -48,3 +43,8 @@
 /kubejs reload
 /datapack list
 /reload
+/kubejs reload server-scripts
+/reload
+/kubejs reload server-scripts
+/reload
+/gamemode survival
